# meal-planner-bot

./: .gitignore  Dockerfile  README.md  behave.ini  build.gradle  settings.gradle
.github/workflows/: ci.yml  ci.yml.disabled  publish.yml
src/main/java/: Main.java  MealPlannerBot.java  Module.java
src/main/java/annotations/: AbilityMark.java
src/main/java/bot/: BaseChoreManagementBot.java  BaseMealPlannerBot.java  ChoreManagementBot.java  Keyboards.java  MealPlannerBot.java  MessagesSender.java
src/main/java/config/: Config.java  ConfigRepository.java
src/main/java/constants/: Messages.java
src/main/java/contants/: Messages.java
src/main/java/exceptions/: APIException.java
src/main/java/models/: ApiError.java  Chore.java  Meal.java  MealList.java  SimpleChore.java  SimpleChoreList.java  Tenant.java  TenantList.java  Ticket.java  TicketList.java  WeeklyChores.java  WeeklyChoresList.java
src/main/java/repositories/: BaseRepository.java  ChoreManagementRepository.java  MealPlannerRepository.java
src/main/java/services/: ChoreManagementService.java  MealPlannerService.java  (+1 more)
src/main/resources/: application.conf  initial.xml  logback.conf  logback.xml
src/test/resources/: messages.json
test/: behave.ini  docker-compose.yml  environment.py  pyproject.toml
test/common/: ansible.py  db.py  telegram.py
test/conf/: logging.conf  properties.cfg
test/features/misc/: start.feature  startCommand.feature  unexpectedText.feature
test/scripts/: docker-compose-up.sh
test/settings/: environment.json
test/steps/: aliases.py  telegram.py
(+22 files in other folders)
